[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Tileset/tiles.tres" type="TileSet" id=1]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=2]
[ext_resource path="res://assets/song/Twister Tetris.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/song/sound effects/key.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/song/sound effects/gem.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/song/sound effects/lvlup.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/song/sound effects/potpickup.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/font/Luckiest_Guy/LuckiestGuy-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/arrow.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 45
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Game" type="Node"]

[node name="Background" type="ColorRect" parent="."]
margin_right = 538.0
margin_bottom = 957.0
color = Color( 0.121569, 0.113725, 0.172549, 1 )

[node name="Grid" type="TileMap" parent="."]
editor/display_folded = true
position = Vector2( 32, 32 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 0, 0, 131071, 0, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 196607, 0, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 0, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 0, 0, 262143, 0, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 0, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 0, 0, 327679, 0, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 0, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 0, 0, 393215, 0, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 0, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 0, 0, 458751, 0, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 0, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 0, 0, 524287, 0, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 0, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 0, 0, 589823, 0, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 0, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 0, 0, 655359, 0, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 0, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 0, 0, 720895, 0, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 0, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 0, 0, 786431, 0, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 0, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 0, 0, 851967, 0, 0, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 0, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 0, 0, 917503, 0, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 0, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 0, 0, 983039, 0, 0, 917504, 1, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 0, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 0, 0, 1048575, 0, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 0, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 0, 0, 1114111, 0, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 0, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 0, 0, 1179647, 0, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 1, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1245183, 0, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 0, 0, 1310719, 0, 0, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 0, 1245189, 1, 0, 1245190, 1, 0, 1245191, 1, 0, 1245192, 1, 0, 1245193, 1, 0, 1245194, 0, 0, 1376255, 0, 0, 1310720, 0, 0, 1310721, 0, 0, 1310722, 0, 0, 1310723, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1441791, 0, 0, 1376260, 0, 0, 1507327, 0, 0, 1441796, 0, 0, 1572863, 0, 0, 1507332, 0, 0, 1638399, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1703935, 0, 0, 1638404, 0, 0, 1769471, 0, 0, 1703940, 0, 0, 1835007, 0, 0, 1769476, 0, 0, 1900543, 0, 0, 1835008, 0, 0, 1835009, 0, 0, 1835010, 0, 0, 1835011, 0, 0, 1835012, 0, 0 )
script = ExtResource( 2 )

[node name="GameMusic" type="AudioStreamPlayer" parent="Grid"]
stream = ExtResource( 3 )
volume_db = -18.252

[node name="Next3" type="Node2D" parent="Grid"]

[node name="Collide" type="AudioStreamPlayer2D" parent="Grid"]
stream = ExtResource( 4 )
volume_db = 4.0

[node name="EliminateRow" type="AudioStreamPlayer2D" parent="Grid"]
stream = ExtResource( 5 )
volume_db = 4.0

[node name="Lost" type="AudioStreamPlayer2D" parent="Grid"]
stream = ExtResource( 6 )
volume_db = 4.0

[node name="ReadyTimer" type="Timer" parent="Grid"]

[node name="ReadySound" type="AudioStreamPlayer2D" parent="Grid"]
stream = ExtResource( 7 )
volume_db = 4.0

[node name="Next" type="Label" parent="."]
margin_left = 375.5
margin_top = 57.0
margin_right = 514.5
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "NEXT THREE"
align = 1
valign = 2

[node name="Score" type="Label" parent="."]
margin_left = 27.0
margin_top = 669.0
margin_right = 166.0
margin_bottom = 709.0
custom_fonts/font = SubResource( 1 )
text = "SCORE"
align = 1
valign = 2

[node name="Level" type="Label" parent="."]
margin_left = 30.0
margin_top = 798.0
margin_right = 169.0
margin_bottom = 838.0
custom_fonts/font = SubResource( 1 )
text = "LEVEL"
align = 1
valign = 2

[node name="GameOver" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -199.0
margin_right = 285.0
margin_bottom = -98.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.890196, 0.113725, 0.113725, 1 )
text = "GAME - OVER"
align = 1
valign = 1

[node name="FinalScore" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.0
margin_top = -57.0
margin_right = 297.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.113725, 0.27451, 0.921569, 1 )
text = "FINAL SCORE:"
align = 1
valign = 1

[node name="FinalScoreNumber" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.0
margin_top = 34.0
margin_right = 295.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.113725, 0.27451, 0.921569, 1 )
text = "0"
align = 1
valign = 1

[node name="GetReady" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -151.0
margin_right = 285.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.894118, 0.937255, 0.12549, 1 )
text = "GET READY!"
align = 1
valign = 1

[node name="321" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = -5.0
margin_right = 285.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.894118, 0.937255, 0.12549, 1 )
text = "3"
align = 1
valign = 1

[node name="ScoreNumber" type="Label" parent="."]
margin_left = 29.0
margin_top = 722.0
margin_right = 158.0
margin_bottom = 784.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="LevelNumber" type="Label" parent="."]
margin_left = 30.0
margin_top = 854.5
margin_right = 157.0
margin_bottom = 916.5
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
valign = 1

[node name="TryAgain" type="ColorRect" parent="."]
editor/display_folded = true
visible = false
margin_left = 247.0
margin_top = 524.0
margin_right = 466.0
margin_bottom = 608.0
color = Color( 0.305882, 0.321569, 0.380392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="TryAgain" type="Button" parent="TryAgain"]
margin_right = 218.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 4 )
text = "TRY AGAIN"
flat = true

[node name="Quit" type="ColorRect" parent="."]
editor/display_folded = true
visible = false
margin_left = 531.0
margin_top = 524.0
margin_right = 750.0
margin_bottom = 608.0
color = Color( 0.305882, 0.321569, 0.380392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Quit" type="Button" parent="Quit"]
margin_right = 218.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 4 )
text = "QUIT"
flat = true

[node name="Pause" type="ColorRect" parent="."]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -281.0
margin_top = -205.0
margin_right = 291.0
margin_bottom = 73.0
color = Color( 0.305882, 0.321569, 0.380392, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Pause"]
margin_right = 572.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 5 )
text = "PAUSED

PRESS ENTER TO CONTINUE"
align = 1
valign = 1
clip_text = true

[node name="UpButton" type="ColorRect" parent="."]
margin_left = 309.0
margin_top = 714.0
margin_right = 419.0
margin_bottom = 821.0
color = Color( 0.494118, 0.466667, 0.466667, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="UpButton"]
visible = false
margin_right = 111.0
margin_bottom = 86.0

[node name="Sprite" type="Sprite" parent="UpButton"]
position = Vector2( 54.5, 50.5 )
scale = Vector2( 3.53125, 3.59375 )
texture = ExtResource( 9 )

[node name="DownButton" type="ColorRect" parent="."]
margin_left = 309.0
margin_top = 834.0
margin_right = 419.0
margin_bottom = 941.0
color = Color( 0.494118, 0.466667, 0.466667, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="DownButton"]
visible = false
margin_right = 111.0
margin_bottom = 86.0

[node name="Sprite" type="Sprite" parent="DownButton"]
position = Vector2( 54.5, 54.5 )
rotation = 3.14159
scale = Vector2( 3.53125, 3.84375 )
texture = ExtResource( 9 )

[node name="LeftButton" type="ColorRect" parent="."]
margin_left = 189.0
margin_top = 834.0
margin_right = 299.0
margin_bottom = 941.0
color = Color( 0.494118, 0.466667, 0.466667, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="LeftButton"]
visible = false
margin_right = 111.0
margin_bottom = 86.0

[node name="Sprite" type="Sprite" parent="LeftButton"]
position = Vector2( 54.5, 54.5 )
rotation = -1.5708
scale = Vector2( 3.53125, 3.84375 )
texture = ExtResource( 9 )

[node name="RightButton" type="ColorRect" parent="."]
margin_left = 429.0
margin_top = 834.0
margin_right = 539.0
margin_bottom = 941.0
color = Color( 0.494118, 0.466667, 0.466667, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="RightButton"]
visible = false
margin_right = 111.0
margin_bottom = 86.0

[node name="Sprite" type="Sprite" parent="RightButton"]
position = Vector2( 54.5, 54.5 )
rotation = 1.5708
scale = Vector2( 3.53125, 3.84375 )
texture = ExtResource( 9 )
[connection signal="timeout" from="Grid/ReadyTimer" to="Grid" method="_on_ReadyTimer_timeout"]
[connection signal="pressed" from="TryAgain/TryAgain" to="Grid" method="_on_TryAgain_pressed"]
[connection signal="pressed" from="Quit/Quit" to="Grid" method="_on_Quit_pressed"]
